--- a/Dockerfile_someHelp
+++ b/Dockerfile_someHelp
@@ -7,3 +7,15 @@ FROM creates a layer from the ubuntu:18.04 Docker image.
 COPY adds files from your Docker client’s current directory.
 RUN builds your application with make.
 CMD specifies what command to run within the container.
+
+Сборка Docker файла расположенного локально: 
+docker build .
+
+Все образы: 
+docker images
+
+Все контейнеры, которые когда-то запускались:
+docker ps -a
+
+Запуск контейнера в консоли:
+docker run -it 13bcb7e0ad0b
