--- a/Dockerfile_someHelp
+++ b/Dockerfile_someHelp
@@ -21,3 +21,12 @@ docker ps -a
 
 Запуск контейнера в консоли:
 docker run -it 13bcb7e0ad0b
+
+TEST
+FROM alpine:3.13
+ENV UID=991 GID=991
+RUN apk update && apk add nginx
+EXPOSE 80 443
+CMD ["/bin/sh"]
+
+
