--- a/Dockerfile_someHelp
+++ b/Dockerfile_someHelp
@@ -10,20 +10,15 @@ COPY adds files from your Docker client’s current directory.
 RUN builds your application with make.
 CMD specifies what command to run within the container.
 
-Сборка Docker файла расположенного локально: 
-docker build .
 
-Все образы: 
-docker images
-
-Все контейнеры, которые когда-то запускались:
-docker ps -a
-
-Запуск контейнера в консоли:
-docker run -it 13bcb7e0ad0b
-
-Войти в контейнер:
-docker exec -it container_name /bin/sh
+docker search nginx   - Поиск образов в базе DockerHub
+docker pull nginx     - скачать из репозитория 
+docker build .  - Сборка Docker файла расположенного локально: 
+docker images  - Все образы: 
+docker ps -a   - Все контейнеры, которые когда-то запускались:
+docker run -it 13bcb7e0ad0b - Запуск контейнера в консоли:
+docker run -it -p 1234:80 nginx - Запуск контейнера с перенапавлением портов (на хосте веб-сервер запустится с http://localhost:1234) 
+docker exec -it container_name /bin/sh    - Войти в контейнер с окружением /bin/sh
 
 TEST
 FROM alpine:3.13
