--- a/Dockerfile_someHelp
+++ b/Dockerfile_someHelp
@@ -1,4 +1,4 @@
-#!Dockerfile
+```Docker
 
 FROM ubuntu:18.04
 COPY . /app
@@ -9,7 +9,7 @@ FROM creates a layer from the ubuntu:18.04 Docker image.
 COPY adds files from your Docker client’s current directory.
 RUN builds your application with make.
 CMD specifies what command to run within the container.
-
+```
 
 Usefull Commands:
 
